<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.massimocarli.mathgame.AchievementsFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_achievement_1_label"
        android:id="@+id/unblock_achievement_1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_achievement_2_label"
        android:id="@+id/unblock_achievement_2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_achievement_3_label"
        android:id="@+id/unblock_achievement_3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_achievement_4_label"
        android:id="@+id/unblock_achievement_4"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_achievement_5_label"
        android:id="@+id/unblock_achievement_5"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/increment_achievement"
        android:id="@+id/increment_achievement"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_achievements_label"
        android:id="@+id/show_achievements"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
