<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.massimocarli.mathgame.EventQuestFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_points_button_label"
        android:id="@+id/add_points_button"
        android:layout_gravity="center_horizontal" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/points_seek_bar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_quest_increment_button_label_1"
        android:id="@+id/increment_point_button_1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_quest_increment_button_label_2"
        android:id="@+id/increment_point_button_2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_quest_increment_button_label_3"
        android:id="@+id/increment_point_button_3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_quest_show_mission_button_label"
        android:id="@+id/show_mission"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
