<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.massimocarli.mathgame.TurnMultiplayerGameFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_invite_friend_button"
        android:id="@+id/turn_invite_friend_button"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_invite_inbox_button"
        android:id="@+id/turn_invite_inbox_button"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_invite_send_move"
        android:id="@+id/turn_invite_send_move_button"
        android:layout_gravity="center_horizontal" />




</LinearLayout>
