<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.co.massimocarli.mathgame.LeaderboardFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_points_button_label"
        android:id="@+id/add_points_button"
        android:layout_gravity="center_horizontal" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/points_seek_bar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_the_best_leaderboard_button_label"
        android:id="@+id/show_the_best_leaderboard_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_leaderboards_button_label"
        android:id="@+id/show_all_leaderboards_button"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
